--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -10,5 +10,12 @@
             <p>Really <em>neat</em> stuff happens here.</p>
             <p>I built this with the help of <a href="http://djangogirls.org">Django Girls</a></p>
         </div>
+        {% for post in posts %}
+        <div>
+            <p>published: {{post.published_date}}</p>
+            <h1><a href="">{{post.title}}</a></h1>
+            <p>{{post.text|linebreaks}}</p>
+        </div>
+        {% endfor %}
     </body>
 </html>
