--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -1,21 +1,36 @@
+{% load staticfiles %}
 <html>
     <head>
         <title>Syne's Blog</title>
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
+        <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap-theme.min.css">
+        <link rel="stylesheet" href="{% static "css/blog.css" %}">
+        <link href="http://fonts.googleapis.com/css?family=Lobster&subset=latin,latin-ext" rel="stylesheet" type="text/css">
     </head>
     <body>
-        <div>
-            <h1>Welcome to my blog!</h1>
+        <div class="page-header">
+            <h1><a href="/">Welcome to my blog!</a></h1>
         </div>
         <div>
             <p>Really <em>neat</em> stuff happens here.</p>
             <p>I built this with the help of <a href="http://djangogirls.org">Django Girls</a></p>
         </div>
-        {% for post in posts %}
-        <div>
-            <p>published: {{post.published_date}}</p>
-            <h1><a href="">{{post.title}}</a></h1>
-            <p>{{post.text|linebreaks}}</p>
+    
+    <div class="content container">
+        <div class="row">
+            <div class="col-md-8">
+                {% for post in posts %}
+                <div class="post">
+                    <div class="date">
+                        {{post.published_date}}
+                    </div>
+                    <h1><a href="">{{post.title}}</a></h1>
+                    <p>{{post.text|linebreaks}}</p>
+                </div>
+                {% endfor %}
+            </div>
         </div>
-        {% endfor %}
+    </div>
+    
     </body>
 </html>
