--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -28,6 +28,7 @@
                     <p>{{post.text|linebreaks}}</p>
                 </div>
                 {% endfor %}
+                foo
             </div>
         </div>
     </div>
