--- a/blog/templates/blog/post_list.html
+++ b/blog/templates/blog/post_list.html
@@ -28,7 +28,7 @@
                     <p>{{post.text|linebreaks}}</p>
                 </div>
                 {% endfor %}
-                
+                foo2
             </div>
         </div>
     </div>
