--- a/blog/templates/blog/base.html
+++ b/blog/templates/blog/base.html
@@ -10,6 +10,9 @@
     <body>
         <div class="page-header">
             <h1><a href="/">Welcome to my blog!</a></h1>
+            {% if user.is_authenticated %}
+            <a href="{% url "post_new" %}" class="top-menu"><span class="glyphicon glyphicon-plus"></span></a>
+            {% end if %}
         </div>  
     
     <div class="content container">
@@ -17,7 +20,6 @@
             <div class="col-md-8">
                 {% block content %}
                 {% endblock %}
-                foo2
             </div>
         </div>
     </div>
